[package]
name = "hello_world"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.4", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.10.1", features = ["full"] }
serde_json = "1"
futures = "0.3"